--- a/AttenceProject/Views/SysDepts/Index.cshtml
+++ b/AttenceProject/Views/SysDepts/Index.cshtml
@@ -29,17 +29,17 @@
 			}
 		};
 
-		var zNodes;
-		$.ajax({
-		    url: "../SysDepts/GetDeptJson", success: function (result) {
-		        alert(result);
-		        zNodes = JSON.parse(result);
-		        //alert(zNodes);
-		    }
-		});
 
 		$(document).ready(function () {
-            
+		    var zNodes;
+		    $.ajax({
+		        url: "../SysDepts/GetDeptJson", success: function (result) {
+		            alert(result);
+		            zNodes = JSON.parse(result);
+		            //alert(zNodes);
+		        }
+		    });
+
 			$.fn.zTree.init($("#treeDemo"), setting, zNodes);
 		});
 		//-->
@@ -57,30 +57,19 @@
             <!-- Begin of toolbar -->
             <div id="wu-toolbar">
                 <div class="wu-toolbar-button">
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-add" onclick="openAdd()" plain="true">添加</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" onclick="openEdit()" plain="true">修改</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-remove" onclick="remove()" plain="true">删除</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" onclick="cancel()" plain="true">取消</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-reload" onclick="reload()" plain="true">刷新</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-print" onclick="openAdd()" plain="true">打印</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-help" onclick="openEdit()" plain="true">帮助</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-undo" onclick="remove()" plain="true">撤销</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-redo" onclick="cancel()" plain="true">重做</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-sum" onclick="reload()" plain="true">总计</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-back" onclick="reload()" plain="true">返回</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-tip" onclick="reload()" plain="true">提示</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-save" onclick="reload()" plain="true">保存</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-cut" onclick="reload()" plain="true">剪切</a>
-                </div>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-add" onclick="DeptAdd()" plain="true">添加部门</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" onclick="PersonAdd()" plain="true">添加员工</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-remove" onclick="removeDept()" plain="true">删除部门</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" onclick="removeAll()" plain="true">删除部门及员工</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" onclick="removePerson()" plain="true">删除员工</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-reload" onclick="EditDept()" plain="true">编辑部门</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-print" onclick="EditPerson()" plain="true">编辑员工</a>
+                    </div>
                 <div class="wu-toolbar-search">
                     <label>起始时间：</label><input class="easyui-datebox" style="width:100px">
                     <label>结束时间：</label><input class="easyui-datebox" style="width:100px">
                     <label>用户组：</label>
                     <select class="easyui-combobox" panelHeight="auto" style="width:100px">
-                        <option value="0">选择用户组</option>
-                        <option value="1">黄钻</option>
-                        <option value="2">红钻</option>
-                        <option value="3">蓝钻</option>
                     </select>
                     <label>关键词：</label><input class="wu-text" style="width:100px">
                     <a href="#" class="easyui-linkbutton" iconCls="icon-search">开始检索</a>
