--- a/AttenceProject/Views/SysOverTimes/Approve.cshtml
+++ b/AttenceProject/Views/SysOverTimes/Approve.cshtml
@@ -41,21 +41,26 @@
 	/**
 	* Name 修改记录
 	*/
-	function edit(){
-		$('#wu-form').form('submit', {
-		    url: '../../SysAlternatives/SaveEdit',
-			success:function(data){
-				if(data=="success"){
-					$.messager.alert('信息提示','提交成功！','info');
-					$('#wu-dialog').dialog('close');
-					window.location.reload();
-				}
-				else
-				{
-					$.messager.alert('信息提示','提交失败！','info');
-				}
-			}
-		});
+	function edit() {
+	    var applystatus = $('input[name="ApplyStatus"]:checked').val();
+	    var applyrate = $("#Applyrate").val();
+	    var applyid = $("#ID").val();
+	    $.ajax({
+	        url: '../../SysOverTimes/SaveApprove',
+	        data: { applystatus: applystatus, applyrate: applyrate, applyid: applyid },
+	        async: false,
+	        dataType: "json",
+	        method: 'get',
+	        success: function (data) {
+	            
+	                $.messager.alert('信息提示', '提交成功！', 'info');
+	                $('#wu-dialog').dialog('close');
+	                window.location.reload();
+	            
+	            
+	        }
+	    });
+		
 	}
 
 	/**
@@ -117,13 +122,13 @@
 	/**
 	* Name 打开修改窗口
 	*/
-	function openEdit(){
+	function openApprove(){
 	    $('#wu-form').form('clear');
 	    var row = $('#wu-datagrid').datagrid('getSelected');
 	    if (row) {
 	        var id = row.ID;
 	        $.ajax({
-	            url: '../../SysAlternatives/GetInfo',
+	            url: '../../SysOverTimes/GetOverTimeInfo',
 	            data: { id: id },
 	            async: false,
                 dataType:"json",
@@ -215,9 +220,9 @@
             <div id="wu-toolbar" class="datagrid-toolbar">
                 <div class="wu-toolbar-button">
                     <a href="#" class="easyui-linkbutton" iconCls="icon-add" onclick="openAdd()" plain="true">添加</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" onclick="openEdit()" plain="true">修改</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-edit" onclick="openApprove()" plain="true">修改</a>
                     <a href="#" class="easyui-linkbutton" iconCls="icon-edit" onclick="openDetail()" plain="true">查看详情</a>
-                    <a href="#" class="easyui-linkbutton" iconCls="icon-remove" onclick="remove()" plain="true">删除</a>
+                    <a href="#" class="easyui-linkbutton" iconCls="icon-remove" onclick="openApprove()" plain="true">进行审批</a>
 
                 </div>
                 @*<div class="wu-toolbar-search">
@@ -237,7 +242,7 @@
             </div>
             <!-- End of toolbar -->
             <table id="wu-datagrid" class="easyui-datagrid" toolbar="#wu-toolbar" title="Basic DataGrid" style="width:inherit; height:inherit"
-                   data-options="singleSelect:true,collapsible:true,url:'../../SysOverTimes/GetJson',pagesize:3,method:'get'"
+                   data-options="singleSelect:true,collapsible:true,url:'../../SysOverTimes/GetApprove',pagesize:3,method:'get'"
                    footer="#foot" pagination="true" rownumbers="true" singleselect="true" fitColumns="true">
                 <thead>
                     <tr>
@@ -252,9 +257,6 @@
                         <th data-options="field:'OverTimeReason',width:200,align:'center'">加班原因</th>
                         <th data-options="field:'CopyFor',width:120">抄送人</th>
                         <th data-options="field:'ApplyStatus',width:60,align:'center'">申请状态</th>
-                        
-                        <th data-options="field:'opt',align:'center',halign:'center'">进行审批</th>
-
                     </tr>
                 </thead>
             </table>
@@ -264,23 +266,54 @@
 
     <!-- Begin of easyui-dialog -->
     <div id="wu-dialog" class="easyui-dialog" data-options="closed:true,iconCls:'icon-save'" style="width:400px; padding:10px;">
-        <form id="wu-form" method="post">
+        <form id="wu-form" method="post" name="form1" action="~/SysOverTimes/SaveAdd">
             <table>
                 <tr style="display:none;">
                     <td width="70" align="right">ID:</td>
-                    <td><input type="text" name="ID" class="wu-text" /></td>
+                    <td><input type="text" name="ID" id="ID" class="wu-text" /></td>
                 </tr>
                 <tr>
                     <td width="70" align="right">申请人ID:</td>
-                    <td><input type="text" name="ProposerID" class="wu-text" /></td>
+                    <td><input type="text" name="ProposerID" disabled="disabled" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">备选项名称:</td>
-                    <td><input type="text" name="AlternativeText" class="wu-text" /></td>
+                    <td width="70" align="right">申请人姓名:</td>
+                    <td><input type="text" name="UserName" disabled="disabled" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td align="right" width="70">备选项信息:</td>
-                    <td><input type="text" name="Remarks" class="wu-text" /></td>
+                    <td align="right" width="70">开始时间:</td>
+                    <td><input type="text" name="StartTime" disabled="disabled" class="wu-text" /></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">结束时间:</td>
+                    <td><input type="text" name="EndTime" disabled="disabled" class="wu-text" /></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">时长:</td>
+                    <td><input type="text" name="Time" disabled="disabled" class="wu-text" /></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">加班类型:</td>
+                    <td><input type="text" name="OverTimeType" disabled="disabled" class="wu-text" /></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">加班结算方式:</td>
+                    <td><input type="text" name="Account_Method" disabled="disabled" class="wu-text" /></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">加班原因:</td>
+                    <td><input type="text" name="OverTimeReason" disabled="disabled" class="wu-text" /></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">审批意见:</td>
+                    <td><textarea class="wu-textarea" id="Applyrate" name="Applyrate"></textarea></td>
+                </tr>
+                <tr>
+                    <td align="right" width="70">审批结果:</td>
+                    <td>
+                        <input type="radio" name="ApplyStatus"  value="1"/>通过
+                        <input type="radio" name="ApplyStatus"  value="0"/>驳回
+                    </td>
                 </tr>
             </table>
         </form>
